已經打通後端可以通知前端

--- a/src/angular/components/layout/container/container.component.html
+++ b/src/angular/components/layout/container/container.component.html
@@ -1,7 +1,13 @@
 <div>
     <div class="container">
         <h3>
-            Hello World
+            Hello World 
         </h3>
+        <div>
+            <label>VID:{{this.VID}}</label>
+        </div>
+        <div>
+            <label>PID:{{this.PID}}</label> 
+        <div>
     </div>
 </div>
